--- a/css/type.css
+++ b/css/type.css
@@ -89,12 +89,6 @@ thead th {
   font-style: italic;
 }
 
-h1, h2, h3, h4, h5, h6,
-p, ul, ol, dl, dd,
-blockquote, details, hr,
-fieldset, pre, table {
-  margin: 0 0 1.3rem;
-}
 
 .yotta {
   font-size: 1.5745rem;
@@ -242,12 +236,6 @@ html {
   line-height: 1.4;
 }
 
-h1, h2, h3, h4, h5, h6,
-p, ul, ol, dl, dd,
-blockquote, details, hr,
-fieldset, pre, table {
-  margin: 0 0 1.4rem;
-}
 
 .yotta {
   font-size: 2.2807rem;
@@ -397,13 +385,6 @@ html {
   line-height: 1.5;
 }
 
-h1, h2, h3, h4, h5, h6,
-p, ul, ol, dl, dd,
-blockquote, details, hr,
-fieldset, pre, table {
-  margin: 0 0 1.5rem;
-}
-
 .yotta {
   font-size: 2.2807rem;
   line-height: 1.3154;
@@ -550,13 +531,6 @@ td, th, fieldset {
 html {
   font-size: 130%;
   line-height: 1.5;
-}
-
-h1, h2, h3, h4, h5, h6,
-p, ul, ol, dl, dd, 
-blockquote, details, hr,
-fieldset, pre, table {
-  margin: 0 0 1.5rem;
 }
 
 .yotta {
